1.16.1: Fixed fertility value bug.
- Fixed trimesterCount value bug.
1.16.0: Added ability for players to customize their own Sexbound API experience.
- Sexbound_Custom is now packaged in the archive.
1.15.0: Changed character heads to move during the animations.
- Changed sprite sheet art for cowgirl position.
- Changed actor 1 and actor 2 to both emote.
- Changed facing direction of birth spawn NPC to match the spawning NPC's facing direction.
- Refactored code.
1.14.2: Fixed an issue related to missing custom species feature directives.
- Changed the layer order of both actor's back arms in all animations.
- Fixed mismatching facing direction when NPC transforms into SexNode.
1.14.1: Fixed facial hair and facial mask bug for custom species.
1.14.0: Changed API to better support custom species.
1.13.1: Fixed bug that hid character facial features when wearing a helmet.
- Fixed Avian male sprite sheet.
1.13.0: Added Cowgirl sex position.
- Added climax animation for Cowgirl position.
- Added new dialog for some species.
- Added new feature to specify dialog for pregnant actors.
- Improved the animation of all sex positions.
1.12.1: Fixed major bug.
- Pregnant sprites added.
1.12.0: Added ability for players to become pregnant and give birth.
1.11.8: Restored compatibility for most custom hair mods.
- Fixed pregnancy bug to ensure all NPC females can become pregnant.
- Fixed bug preventing some NPC tenants from working.
- Other bug fixes.
1.11.7: Fixed incompatibility issue with some other mods.
1.11.6: Fixed new duplicating bug related to tenants.
1.11.5: Fixed tenant related issues once and for all.
1.11.4: Fixed duplicate unique id error.
1.11.3: Fixed bug when extracting player identity data.
1.11.2: Fixed forgotten NPC storage bug, so tenants will remember their homes.
1.11.1: Fixed duplicating tenants bug.
- Fixed wrong avian plumage bug.
- Fixed pregnancy storage bug.
1.11.0: Added emotes to NPC faces during sex.